crates/aranya-policy-compiler/tests/data/commands/recall_duplicate_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `foo` is defined multiple times
   |
 8 |     recall foo() {
   |            --- previous defintion here
 9 |     }
10 |     recall foo() {
   |            ^^^ re-defined here
